--- a/all.html
+++ b/all.html
@@ -315,7 +315,7 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>🇬🇧 Top UK Race Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>🇬🇧 UK RaceTips Editor</span></button>
         <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>🇦🇺 Top AUS (TARR|HARR) Race Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>🇦🇺 AUS New (v9.00 e0|.K./.H.(HARR)) Marker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>🇦🇺 AUS New v9.00 (HARR) Marker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>🇦🇺 AUS .K./.H. (HARR) Marker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>🇦🇺 AUS .K./.H. (TARR) Marker </span></button>
         <button onclick="underMaintenance()"> <span>🇦🇺 AUS (GREY) Tracker</span></button>
@@ -505,3 +505,4 @@ function convert() {
 </script>
 </body>
 </html>
+
