--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ footer {
 
     <!-- AUS/UK → SL Time Converter -->
     <div id="converter">
-        <label>Enter Time (HH:MM):</label>
+        <label>Enter Time (UK / AUS) (HH:MM):</label>
         <input type="time" id="userTime">
         <label>Select Country:</label>
         <select id="country" onchange="updateOffsetOptions()">
@@ -506,6 +506,7 @@ function convert() {
 </script>
 </body>
 </html>
+
 
 
 
